<resources>
    <string name="app_name">Cynosure\'16</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam condimentum lacus ligula, a auctor lectus lobortis sit amet. Proin in neque at justo suscipit mattis quis vitae nulla. Duis maximus sapien a nulla egestas, non ultrices tortor dictum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut at magna tristique, elementum lacus ac, vestibulum nunc. Donec felis lectus, fringilla eget gravida sed, lacinia id tellus. Sed nisl justo, tempor eget mollis quis, auctor vitae quam. Pellentesque habitant morbi tristique senectus et netus.</string>
    <string-array name="tabs">
        <item>Home</item>
        <item>Events</item>
        <item>Workshops</item>
        <item>Sponsors</item>
    </string-array>
    <string name="title_activity_robo_wars">RoboWars</string>
    <string name="title_activity_ispeak">I-Speak</string>
    <string name="title_activity_frugal_labs">Frugal World</string>
    <string name="title_activity_mock_drive">Mock Recruitment Drive</string>
    <string name="title_activity_framed">#Framed</string>
    <string name="title_activity_xcelerate">X\'celerate Reloaded</string>
    <string name="title_activity_market_kshetra">Marketkshetra</string>
    <string name="title_activity_estate_wars">Estate Wars</string>
    <string name="title_activity_structura">Structura</string>
    <string name="title_activity_enigma">Enigma</string>
    <string name="title_activity_detective">D-Tech-Tive</string>
    <string name="title_activity_micro_app">Micro-App</string>
    <string name="title_activity_micro_mouse">Micromouse</string>
    <string name="title_activity_prog_champs">Prog.Champs</string>
    <string name="title_activity_googler">Googler</string>
    <string name="title_activity_maze_runner">Maze Runner</string>
    <string name="title_activity_crime_scene">C.S.I.</string>
    <string name="title_activity_ignite">Ignite</string>
    <string name="title_activity_thought_expo">Thought-Expo</string>
    <string name="college_name">Dr. Babasaheb Ambedkar Technological University</string>
    <string name="presents">Presents</string>
    <string name="college_info">The young turks of Dr. B.A.T.U. proudly present their technical festival, CYNOSURE 2k16. With a vision to inspire the engineers, CYNOSURE 2k16 provide the platform for the brightest minds of state to showcase their own creativity and ingenuity. Students from across the state participate here. What\'s in the store is an enthralling experience. Participate and take home prizes worth ₹ 2,00,000 this year.</string>
    <string name="cyno_logo">Cynosure Logo</string>
    <string name="team">Team Cynosure</string>
    <string name="title_activity_team">Team</string>
    <string name="event_fees">Event Fees</string>
    <string name="rules">Rules</string>
    <string name="rounds">Rounds</string>
    <string name="round1">Round 1</string>
    <string name="round2">Round 2</string>
    <string name="round3">Round 3</string>
    <string name="round4">Round 4</string>
    <string name="round5">Round 5</string>
    <string name="description">Description </string>
    <string name="event_head">Event Head</string>
    <string name="divider">dividerLine</string>
    <string name="csi_info">Justice is an exalted term-easy to promote but difficult to articulate in any context.\nIn any crime,the needle of suspicion falls on several suspects but apart from this,\na crime is generally done for a presise purpose.\nSo your art lies in zeroing in on the culprit as well as finding out the reason behind the murder.\nThis is your aim at ‘CSI’.\nExercise your grey cells,apply intellect and reason,invoke your spy inside you and solve the crime scene.\nAnd the reward will be an unforgettable experience-the thrill,horror and excitement of unraveling the mystery !!</string>
    <string name="csi_fees">₹ 100/- per team</string>
    <string name="csi_rules">1. Strictly a team of 2 people.\n2. Language: English.\n3. In a case of tie, judging will be done on the time taken to complete the task - applicable for all rounds.\n4. Use of cell phones is strictly prohibited.</string>
    <string name="csi_round1">Watch to Catch</string>
    <string name="csi_round2">Deduction</string>
    <string name="csi_round3">Chase the Case</string>
    <string name="csi_head">Sahil Kawade</string>
    <string name="detec_info">D-Tech-Tive involves Pictionary (guessing a word game), wherein a team member has to illustrate the given set of scientific words to the other team member via actions, drawings and physical gestures within a specified time-limit. It will consist of several rounds, pertaining to scientific words. Indeed assessing the trust and creativity within a team.</string>
    <string name="detec_fees">₹ 100/- per team</string>
    <string name="detec_rules">1. A team with 2 Participants is allowed.\n2. The decision made by the organizers will be final.\n3. Any further addition to the rules will be conveyed on spot.	</string>
    <string name="detec_round1">One member of the team will be given a SPECIFIC word. The person has to demonstrate the word to his/her partner with the help of maximum 3 RELATED words within the given time limit.</string>
    <string name="detec_round2">Participant will have to find the word with the help of given clue and letters provided and arrange the letters accordingly. The specified number of teams completing the task in minimum time will advance to the final round.</string>
    <string name="detec_round3">One member of the team will be provided with a paragraph which will contain a specific object, which will be available near the vicinity of the event. The other teammate will have to find that object and give it to his/her partner within minimum time.</string>
    <string name="detec_head1">Bhushan Mahajan</string>
    <string name="detec_head2">Rijo Daniel</string>
    <string name="robo_fees">₹ 1000/- per team</string>
    <string name="robo_info">Design and construct a remote controlled robot capable of fighting a one on one tournament.</string>
    <string name="robo_rules">1. Maximum 10 members per team.\n2. A team, once registered, can register again, but with same team name.\n3. All students with a valid identity card of their respective educational institutes are eligible to participate.\n4. Teams will be required to show the I-Cards of all of its team members during the matches.\n5. A team may consist of members from different educational institutes.\n6. Points will be deducted in case of multiple operators in a single match.</string>
    <string name="robo_head1">Shubhankar Jathar</string>
    <string name="robo_head2">Vivekanand Desai</string>
    <string name="framed_fees">₹ 50/- per Participant</string>
    <string name="framed_info">Photography has little to do with what you see and everything to do with the way you see.\nSend your best photos and see your photos displayed on the WALL OF FAME. </string>
    <string name="framed_rules">1. No Restrictions on no. of entries per Person.\n2. Minimum 5MP Resolution.\n3. No Watermarks or Borders.</string>
    <string name="framed_round1">70 photographs will be selected from the entries.</string>
    <string name="framed_round2">Top 20 individuals from Round 1 will compete on the basis of their photography skills which they will be clicking on campus according to the topics given.</string>
    <string name="framed_round3">Top 10 individuals from Round 2 will be given any 3 events from CYNOSURE 2k16 to cover which are to be submitted later.</string>
    <string name="framed_head1">Noopur Gaikwad</string>
    <string name="framed_head2">Noopur Walve</string>
    <string name="enigma_fees">₹ 200/- per team</string>
    <string name="enigma_info">An Enigma is a chain of different \'ENERGY CONVERSION\' steps, in which one steps triggers the next one leading to completion of final task. It is all about making the most complicated solution to a simple problem.\nThis event is designed to pull students away from conventional problem solving and push them into the endless chaos of imagination and intuitive thought.</string>
    <string name="enigma_rules">1. A team with maximum 4 Participants is allowed.\n2. The decision made by the organizers will be final.\n3. Participants can start building the contraption four hours prior to start of the event.\n4. Any further addition to rules will be conveyed on spot.</string>
    <string name="enigma_round">The event will consist of only ONE round:\nTwo tasks are to be completed.\nFirst task is glowing of 3 LEDs and final task is displaying a message\slogan about ENERGY CONSERVATION.\nMaximum trials allowed is TWO. Time allowed for 2nd trial is 45 minutes.</string>
    <string name="enigma_head1">Vatan Mehar</string>
    <string name="enigma_head2">Revankumar Mahajan</string>
    <string name="estate_fees">₹ 200/- per team</string>
    <string name="estate_info">This is the world of competition where we all need to compete in many fields to get success and competing with some experience is much beneficial for us.This event consist of developing a given land based on the specification.\nThis event not only gives the developing techniques but also contributes to our knowledge of GK, aptitude, bidding process, university and investment policies.</string>
    <string name="estate_rules">1. A team with 2 Participants is allowed.\n2. The decision made by the organizers will be final.\n3. Any further addition to the rules will be conveyed on spot.</string>
    <string name="estate_round1">Aptitude Test- Those who clear aptitude will be treated as developers and others as investors.</string>
    <string name="estate_round2">For Developers-\n   1. Bidding process\n   2. Planning</string>
    <string name="estate_round3">For Developers-\n   Model Making\nFor Investors-\n   Investors will be given a virtual money, which they have to invest in the land developed by developers.</string>
    <string name="estate_head1">Onkar Deshpande</string>
    <string name="estate_head2">Sunil Narvade</string>
    <string name="frugal_fees">₹ 50/- per Individual for a group of 2/3 students</string>
    <string name="xcelerate_info">Here comes the most awaited Event of the year\nX\'celerate Reloaded 2K16\nCreating buzz all over again with All its Grace and Valour\nIt\'s not just a Race but even more Fun and Thrill\nRacing, Jousting, Hidden rounds, Puzzles and lot more\nSo, are you ready to conquer your way to Victory?</string>
    <string name="xcelerate_fees">₹ 300/- per team</string>
    <string name="xcelerate_rules">1. Only one robot per team is allowed in the respective rounds(may change the robot in further rounds but not in the same round).\n2. Points in robot specifications will be part of rules.\n3. Once the round is started same operator will continue till the end for respective rounds.\n4. To touch the robot while racing will not be allowed.\n5. The time and points recorded by the organizers will be final and won\'t be changed in any conditions.</string>
    <string name="xcelerate_round1">Qualified bots will race with the opponent and they should clear all hurdles</string>
    <string name="xcelerate_round2">Beat the opponent out of the way to make your way to victory.</string>
    <string name="xcelerate_round3">A hidden round-an intermediate between the rounds.</string>
    <string name="xcelerate_round4">Complete the specified task with your own designed bot (football).</string>
    <string name="xcelerate_round5">See the track, Solve the track, Make and Build your way. Most exciting tasks. Most amazing and efficient will be the winner.</string>
    <string name="xcelerate_head1">Prasad Kadam</string>
    <string name="xcelerate_head2">Sayali Patil</string>
    <string name="follow">Follow us on:</string>
</resources>