<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dividerColor"
    android:clipToPadding="false"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:padding="16dp"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="26dp"
                    android:paddingRight="26dp"
                    android:paddingTop="8dp"
                    android:text="@string/description"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:src="@drawable/line" />

                <TextView
                    android:id="@+id/description1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="4dp"
                    android:paddingBottom="26dp"
                    android:paddingLeft="26dp"
                    android:paddingRight="26dp"
                    android:paddingTop="8dp"
                    android:text="@string/xcelerate_info"
                    android:textColor="@color/primaryText"
                    android:textSize="18sp" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:padding="16dp"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/rules1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="26dp"
                    android:paddingRight="26dp"
                    android:paddingTop="8dp"
                    android:text="@string/event_fees"
                    android:textColor="@color/colorPrimary"
                    android:textColorHighlight="#ff00ff"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:src="@drawable/line" />

                <TextView
                    android:id="@+id/rules"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="26dp"
                    android:paddingLeft="26dp"
                    android:paddingRight="26dp"
                    android:paddingTop="8dp"
                    android:text="@string/xcelerate_fees"
                    android:textColor="@color/primaryText"
                    android:textSize="18sp" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:padding="16dp"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/rules_main"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="26dp"
                    android:paddingRight="26dp"
                    android:paddingTop="8dp"
                    android:text="@string/rules"
                    android:textColor="@color/colorPrimary"
                    android:textColorHighlight="#ff00ff"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:src="@drawable/line" />

                <TextView
                    android:id="@+id/entryfees2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="4dp"
                    android:paddingBottom="26dp"
                    android:paddingLeft="26dp"
                    android:paddingRight="26dp"
                    android:paddingTop="8dp"
                    android:text="@string/xcelerate_rules"
                    android:textColor="@color/primaryText"
                    android:textSize="18sp" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:padding="16dp"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/rounds"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="26dp"
                    android:paddingRight="26dp"
                    android:paddingTop="8dp"
                    android:text="@string/rounds"
                    android:textColor="@color/colorPrimary"
                    android:textColorHighlight="#ff00ff"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:src="@drawable/line" />


                <TextView
                    android:id="@+id/rounds1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="26dp"
                    android:paddingRight="26dp"
                    android:paddingTop="8dp"
                    android:text="@string/round1"
                    android:textColor="@color/primaryText"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/round_info1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="26dp"
                    android:paddingRight="26dp"
                    android:paddingTop="2dp"
                    android:text="@string/xcelerate_round1"
                    android:textColor="@color/primaryText"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/rounds2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="26dp"
                    android:paddingRight="26dp"
                    android:paddingTop="8dp"
                    android:text="@string/round2"
                    android:textColor="@color/primaryText"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/round_info2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="26dp"
                    android:paddingRight="26dp"
                    android:paddingTop="2dp"
                    android:text="@string/xcelerate_round2"
                    android:textColor="@color/primaryText"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/rounds3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="26dp"
                    android:paddingRight="26dp"
                    android:paddingTop="8dp"
                    android:text="@string/round3"
                    android:textColor="@color/primaryText"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/round_info3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="26dp"
                    android:paddingRight="26dp"
                    android:paddingTop="2dp"
                    android:text="@string/xcelerate_round3"
                    android:textColor="@color/primaryText"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/rounds4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="26dp"
                    android:paddingRight="26dp"
                    android:paddingTop="8dp"
                    android:text="@string/round4"
                    android:textColor="@color/primaryText"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/round_info4"

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="26dp"
                    android:paddingRight="26dp"
                    android:paddingTop="2dp"
                    android:text="@string/xcelerate_round4"
                    android:textColor="@color/primaryText"
                    android:textSize="18sp" />

                <TextView

                    android:id="@+id/rounds5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="26dp"
                    android:paddingRight="26dp"
                    android:paddingTop="8dp"
                    android:text="@string/round5"
                    android:textColor="@color/primaryText"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/round_info5"

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="26dp"
                    android:paddingLeft="26dp"
                    android:paddingRight="26dp"
                    android:paddingTop="2dp"
                    android:lineSpacingExtra="4dp"
                    android:text="@string/xcelerate_round5"
                    android:textColor="@color/primaryText"
                    android:textSize="18sp" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:padding="16dp"
            android:clickable="true"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_eff"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/contact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="26dp"
                    android:paddingRight="26dp"
                    android:paddingTop="8dp"
                    android:text="@string/event_head"
                    android:textSize="20sp"
                    android:textColor="@color/colorPrimary" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/line"
                    android:padding="8dp"
                    android:contentDescription="@string/divider"
                    android:layout_below="@+id/contact"
                    android:id="@+id/imageView2" />

                <TextView
                    android:id="@+id/contact1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imageView2"
                    android:text="@string/xcelerate_head1"
                    android:textSize="18sp"
                    android:textColor="@color/primaryText"
                    android:layout_toLeftOf="@+id/imageButton"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:gravity="center_vertical"
                    android:paddingLeft="26dp"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_call_black_36dp"
                    android:background="#FFFFFF"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:id="@+id/imageButton"
                    android:layout_below="@+id/imageView2"
                    android:layout_alignBottom="@+id/contact1"
                    android:padding="16dp"
                    android:paddingBottom="26dp"
                    android:clickable="true"
                    android:onClick="callHead1"/>

                <TextView
                    android:id="@+id/contact2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/contact1"
                    android:text="@string/xcelerate_head2"
                    android:textSize="18sp"
                    android:textColor="@color/primaryText"
                    android:layout_toLeftOf="@+id/imageButton"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:gravity="center_vertical"
                    android:paddingLeft="26dp"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_call_black_36dp"
                    android:background="#FFFFFF"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:id="@+id/imageButton2"
                    android:layout_below="@+id/imageButton"
                    android:layout_alignBottom="@+id/contact2"
                    android:padding="16dp"
                    android:paddingBottom="26dp"
                    android:clickable="true"
                    android:onClick="callHead2"/>


            </RelativeLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
