<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dividerColor"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageViewCynosureLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewPresents"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/cyno_logo"
            android:src="@drawable/logo" />

        <ImageView
            android:id="@+id/imageViewEventname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foregroundGravity="center"
            android:src="@drawable/event_name"
            android:layout_below="@+id/imageViewCynosureLogo" />

        <TextView
            android:id="@+id/textViewCollegeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/college_name"
            android:textColor="@color/primaryText"
            android:textSize="28sp" />

        <ImageView
            android:id="@+id/imageViewCollegeLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewCollegeName"
            android:layout_centerHorizontal="true"
            android:src="@drawable/college_logo" />

        <TextView
            android:id="@+id/textViewPresents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageViewCollegeLogo"
            android:layout_centerHorizontal="true"
            android:text="@string/presents"
            android:textColor="@color/primaryText"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageViewEventname"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp"
            android:text="@string/college_info"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/primaryText" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButton3"
            android:src="@drawable/fb"
            android:padding="8dp"
            android:background="@color/dividerColor"
            android:onClick="fb"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButton4"
            android:src="@drawable/utube"
            android:padding="8dp"
            android:onClick="utube"
            android:background="@color/dividerColor"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/imageButton3"
            android:layout_toEndOf="@+id/imageButton3" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButton5"
            android:padding="8dp"
            android:onClick="insta"
            android:src="@drawable/insta"
            android:background="@color/dividerColor"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/imageButton4"
            android:layout_toEndOf="@+id/imageButton4" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButton6"
            android:src="@drawable/twitter"
            android:onClick="twitter"
            android:padding="8dp"
            android:background="@color/dividerColor"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/imageButton5"
            android:layout_toEndOf="@+id/imageButton5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="16sp"
            android:text="@string/follow"
            android:textColor="@color/primaryText"
            android:gravity="center"
            android:id="@+id/textView2"
            android:layout_below="@+id/textView"
            android:layout_toLeftOf="@+id/imageButton3"
            android:layout_alignBottom="@+id/imageButton3"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    </RelativeLayout>

</ScrollView>